[package]
name = "pypy-cdn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = { version = "1.0.80", features = ["backtrace"] }
async-trait = "0.1.77"
chrono = "0.4.31"
clap = { version = "4.4.18", features = ["env", "derive", "string"] }
dotenvy = "0.15.7"
env_logger = "0.11.3"
futures = "0.3.30"
hex = "0.4.3"
itertools = "0.13.0"
log = "0.4.20"
rand = "0.8.5"
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.114"
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
tokio-util = "0.7.10"
warp = "0.3.6"
warp-range = "2.0.0"
warp-real-ip = "0.2.0"
notify = "6.1.1"
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
rtsp-types = "0.1.1"

redis = { version = "0.23.3", features = ["tokio-comp", "serde_json", "serde", "json"] }
bb8 = "0.8.1"
bb8-redis = "0.13.1"

[dev-dependencies]
mock_instant = "0.3.0"
